[package]
name = "littletest"
version = "0.2.0"
authors = ["Justin Latimer <justinlatimer@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/justinlatimer/littletest"
homepage = "https://github.com/justinlatimer/littletest"
documentation = "https://github.com/justinlatimer/littletest"
description = """
A little testing library.
"""

[dependencies]
rayon = "0.4.0"
